syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.sep_t3.protobuf";
//Service definition


message User
{
  int32 id=1;
  string username = 2;
  string userPass = 3;
  string fullName = 4;
  string email = 5;
  string phoneNumber = 6;
  string address = 7;
  int32 registeredOn=8;
  int32 lastSeen=9;
}
message UserDTO
{
  string username = 1;
  string userPass = 2;
  string email = 3;
  string fullName=4;
  string address = 5;
  string phoneNumber = 6;
}
message Empty {

}
message GenericReply
{
  string message=1;
}
message UsersGrpc
{
  repeated User users = 1;
}

service sepService
{
  rpc getAllUsers(Empty) returns (UsersGrpc);
  rpc createUser(UserDTO) returns(User);
}